fix: add the "can I use" section

--- a/docs/how-to-guides/webiny-applications/admin-area/create-a-file-type-plugin.mdx
+++ b/docs/how-to-guides/webiny-applications/admin-area/create-a-file-type-plugin.mdx
@@ -12,6 +12,10 @@ import mp4Plugin from "./create-a-file-type-plugin/mp4-plugin.png";
 import fileActions from "./create-a-file-type-plugin/file-actions.png";
 import customActions from "./create-a-file-type-plugin/custom-actions.png";
 
+:::info Can I Use This?
+This feature is available since Webiny **v5.8.0**.
+:::
+
 :::tip What you'll learn
 
 - how to customize file rendering within Webiny File Manager
