refactor: remove mdxComponents folder and update usages in all articles

--- a/docs/changelog/5.3.0.mdx
+++ b/docs/changelog/5.3.0.mdx
@@ -6,7 +6,7 @@ keywords: ["webiny", "version", "5.3.0", "changelog"]
 description: See what's new in Webiny version 5.3.0.
 ---
 
-import CenteredImage from "../mdxComponents/centeredImage";
+import CenteredImage from "@components/CenteredImage";
 import cliReporting from "./5.3.0/cli-reporting.png";
 import searchBarCms from "./5.3.0/search-bar-cms.png";
 
