--- a/docs/changelog/5.4.0.mdx
+++ b/docs/changelog/5.4.0.mdx
@@ -6,7 +6,7 @@ keywords: ["webiny", "version", "5.4.0", "changelog"]
 description: See what's new in Webiny version 5.4.0.
 ---
 
-import CenteredImage from "../mdxComponents/centeredImage";
+import CenteredImage from "@components/CenteredImage";
 import reorderingUi from "./5.4.0/reorder-ui.gif";
 import reorderButton from "./5.4.0/reorder-button.svg";
 
