--- a/docs/changelog/5.5.0.mdx
+++ b/docs/changelog/5.5.0.mdx
@@ -6,7 +6,7 @@ keywords: ["webiny", "version", "5.5.0", "changelog"]
 description: See what's new in Webiny version 5.5.0.
 ---
 
-import CenteredImage from "../mdxComponents/centeredImage";
+import CenteredImage from "@components/CenteredImage";
 import watchCommand from "./5.5.0/watch-command-webiny.gif";
 import watchCommandLogs from "./5.5.0/watch-command-webiny-logs.png";
 import treeCommand from "./5.5.0/tree-command.png";
