--- a/docs/changelog/5.6.0.mdx
+++ b/docs/changelog/5.6.0.mdx
@@ -6,7 +6,7 @@ keywords: ["webiny", "version", "5.6.0", "changelog"]
 description: See what's new in Webiny version 5.6.0.
 ---
 
-import CenteredImage from "../mdxComponents/centeredImage";
+import CenteredImage from "@components/CenteredImage";
 import pbNavigatorDemo from "./5.6.0/pb-navigator-block-reorder.gif";
 import pbElementVisibilitySettingDemo from "./5.6.0/pb-navigator-visibility.gif";
 import cmsContentModelGroupsChanging from "./5.6.0/cms-content-model-groups-changing.gif";
