--- a/docs/how-to-guides/upgrade-webiny/5.0.0-beta.4-to-5.0.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-beta.4-to-5.0.0.mdx
@@ -8,7 +8,7 @@ description: Learn how to upgrade Webiny from 5.0.0-beta.4 to 5.0.0.
 
 import dynamoToElasticImage from "../assets/upgrading-webiny/5.0.0-beta.4-to-5.0.0/dynamoToElastic.png";
 import pulumiImage from "../assets/upgrading-webiny/5.0.0-beta.4-to-5.0.0/pulumi.png";
-import CenteredImage from "../../mdxComponents/centeredImage";
+import CenteredImage from "@components/CenteredImage";
 
 :::tip What you’ll learn
 
