--- a/docs/how-to-guides/webiny-cli/use-watch-command.mdx
+++ b/docs/how-to-guides/webiny-cli/use-watch-command.mdx
@@ -6,7 +6,7 @@ keywords: ["webiny", "watch", "command", "development"]
 description: Learn how to continuously rebuild and redeploy your code using the "webiny watch" command.
 ---
 
-import CenteredImage from "../../mdxComponents/centeredImage";
+import CenteredImage from "@components/CenteredImage";
 import preview from "./use-watch-command/watch-command-preview.png";
 import pseudoConsoles from "./use-watch-command/git-support-pseudo-consoles.png";
 
