--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -7,8 +7,8 @@ description: Documentation portal for Webiny serverless framework.
 slug: webiny/introduction
 ---
 
-import Theme from "./mdxComponents/theme";
-import { Box, Button, Heading, Grid, Link, Badge } from "theme-ui";
+import Theme from "@components/Theme";
+import { Button, Link, Badge } from "theme-ui";
 
 <Theme>
 
