--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -6,10 +6,9 @@ keywords: ["webiny", "headless", "cms", "graphql", "api", "locales", "types", "s
 description: Learn what is the Headless CMS GraphQL API, what are its main characteristics, and how to access it.
 ---
 
-import CenteredImage from "../../../mdxComponents/centeredImage";
+import CenteredImage from "@components/CenteredImage";
 import securityImagePart1 from "./graphql-api/security-cms-form-1.png";
 import securityImagePart2 from "./graphql-api/security-cms-form-2.png";
-import apiPlaygroundMainMenu from "./graphql-api/api_playground_from_main_menu.png";
 import apiPlayground from "./graphql-api/api-playground.png";
 import apiUrlWebinyCli from "./graphql-api/api-url-webiny-cli.png";
 import apiPlaygroundSwitchLocale from "./graphql-api/api-playground-switch-locale.png";
