--- a/docs/tutorials/create-an-application/security/admin-area.mdx
+++ b/docs/tutorials/create-an-application/security/admin-area.mdx
@@ -6,7 +6,7 @@ keywords: ["application", "security", admin", "area"]
 description: Learn how you can secure your Webiny Admin Area modules.
 ---
 
-import CenteredImage from "../../../mdxComponents/centeredImage";
+import CenteredImage from "@components/CenteredImage";
 import securityGroupsSelection from "./assets/security-groups-selection.png";
 import securityGroupsPermissions from "./assets/security-groups-permissions.png";
 import addedSecurityPermissionsGroup from "./assets/added-security-permissions-group.png";
