--- a/docs/tutorials/create-an-application/security/graphql-api.mdx
+++ b/docs/tutorials/create-an-application/security/graphql-api.mdx
@@ -6,7 +6,7 @@ keywords: ["application", "security", "graphql", "api"]
 description: Learn how you can secure your GraphQL API.
 ---
 
-import CenteredImage from "../../../mdxComponents/centeredImage";
+import CenteredImage from "@components/CenteredImage";
 import unprotectedQuery from "./assets/unprotected-query.png";
 import unprotectedMutation from "./assets/unprotected-mutation.png";
 import graphqlAuthError from "./assets/query-auth-error.png";
