--- a/docs/tutorials/create-an-application/security/introduction.mdx
+++ b/docs/tutorials/create-an-application/security/introduction.mdx
@@ -6,7 +6,7 @@ keywords: ["application", "security", "introduction"]
 description: Learn how you can secure your applications.
 ---
 
-import CenteredImage from "../../../mdxComponents/centeredImage";
+import CenteredImage from "@components/CenteredImage";
 import securityGroupsPermissions from "./assets/security-groups-permissions.png";
 import addedSecurityPermissionsGroup from "./assets/added-security-permissions-group.png";
 import newSecurityGroup from "./assets/new-security-group.png";
