--- a/docs/how-to-guides/deployment/aws/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws/credentials.mdx
@@ -10,7 +10,7 @@ description: Configure AWS credentials.
 - how to configure your AWS credentials for programmatic access
 :::
 
-import YouTube from "../../../mdxComponents/youtube";
+import YouTube from "@components/Youtube";
 
 This article guides you through configuring your AWS credentials for programmatic access. At the end of the tutorial, you will have your API keys and region configured to successfully deploy Webiny to your AWS cloud.
 
