fix: mention staging/prod cloud infrastructure differences

--- a/docs/key-topics/ci-cd/environments.mdx
+++ b/docs/key-topics/ci-cd/environments.mdx
@@ -104,9 +104,9 @@ New fixes and features are first deployed into this environment, might be unstab
 
 #### `staging`
 
-For testing new release candidates in a production-like environment. This environment has to reach a state that can be considered as stable, before deploying application changes to **production**.
+For testing new release candidates in a production-like environment. Meaning, here we deploy the same application code and cloud infrastructure resources that we will ultimately deploy into the production environment, used by real users.
 
-#### `production`
+#### `prod` (`production`)
 
 A system used by real users. Must be in a state that is considered as stable, as much of the time as possible.
 
@@ -137,3 +137,12 @@ Yes. The `dev`, `staging`, and `prod` is the minimum we recommend, but you can h
 #### Are the names of environments fixed in any way?
 
 Environment names are not fixed or hard-coded in any way. We use `dev`, `staging`, and `prod` as these names are often familiar to developers. Feel free to name these differently if your organization follows different conventions.
+
+#### Except my application code, should the `staging` and `prod` cloud infrastructure also be the same?
+
+With serverless application development, the deployed cloud infrastructure can play a vital role in our application. It's no longer just about the application code. So, with that in mind, in order to reduce the chance of introducing regressions that our users could experience, we recommend that the `prod` and `staging` environments are same on both application code and cloud infrastructure level.
+
+To enable this, please open your [`packages/cwp-template-aws/template/api/pulumi/index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/index.ts#L7) file, and uncomment the `staging` string in the `PROD_STACK_ENVIRONMENTS` array.
+
+:::info
+Learn more about differences between the development and production cloud infrastructure differences in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/api/introduction#different-cloud-infrastructure-setups) key topic.
