docs: improved the statements and command
Thanks: Adrian Smijulj, for the inputs.

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -75,21 +75,21 @@ yarn webiny deploy apps/website --env dev
 
 Note that when deploying a specific project application, the environment (`--env`) argument is not optional, it must always be set.
 
-## List AWS resources
+## List AWS Resources
 After deployment, you can view the list of AWS resources and services used by your project application.
 As mentioned above, every Webiny project, by default, has three applications.
-The **api** (`./api`), which represents your project's (GraphQL) API, **admin** (`./apps/admin`), and the **website** (`./apps/website`), which is your public website.
-Each application uses several cloud infrastructure resources like Lambda functions, API Gateway, DynamoDB table, etc.
+The **API** (`./api`), which represents your project's (GraphQL) API, **Admin Area** (`./apps/admin`), and the **Website** (`./apps/website`), which is your public website.
+Each application uses several cloud infrastructure resources like AWS Lambda functions, API Gateway, DynamoDB table, etc.
 
 To list the resources used by a particular application for an [environment](/docs/key-topics/deployment/environments), you can use the `stack` command.
 ```bash
-yarn webiny pulumi <application-name> --env <environment-name> stack
+yarn webiny pulumi {folder} --env {env} -- stack
 ```
 
-For example, to list resources used by the `api` application for `dev` environment, run the following command:
-
+For example, to list all cloud infrastructure resources deployed as part of the **API** project
+application, deployed into the `dev` environment, you can run the following command:
 ```bash
-yarn webiny pulumi api --env dev stack
+yarn webiny pulumi api --env dev -- stack
 ```
 
 <!-- vale off -->
@@ -103,12 +103,17 @@ yarn webiny pulumi api --env dev stack
 
 <!-- vale on -->
 
-Similarly, you can use the following commands to list AWS resources used by the `admin` and `website` application for the `dev` environment.
+Similarly, you can use the following commands to list all cloud infrastructure resources
+deployed as part of the **Admin Area** and **Website** project applications, into the `dev` environment:
 
 ```bash
-yarn webiny pulumi apps/admin --env dev stack
-yarn webiny pulumi apps/website --env dev stack
+yarn webiny pulumi apps/admin --env dev -- stack
+yarn webiny pulumi apps/website --env dev -- stack
 ```
+:::info
+For more information, please visit the [Execute Pulumi Commands](/docs/how-to-guides/deployment/execute-pulumi-commands) guide.
+:::
+
 
 ## Debugging
 
