docs: improved a statements
Thanks: Adrian Smijulj, for the input.

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -81,7 +81,7 @@ As mentioned above, every Webiny project, by default, has three applications.
 The **API** (`./api`), which represents your project's (GraphQL) API, **Admin Area** (`./apps/admin`), and the **Website** (`./apps/website`), which is your public website.
 Each application uses several cloud infrastructure resources like AWS Lambda functions, API Gateway, DynamoDB table, etc.
 
-To list the resources used by a particular application for an [environment](/docs/key-topics/deployment/environments), you can use the `stack` command.
+To list all cloud infrastructure resources deployed as part of a particular project application, we can run the following command:
 ```bash
 yarn webiny pulumi {folder} --env {env} -- stack
 ```
