docs: improved the statements and existing typos
Thanks: Adrian Smijulj, for the inputs.

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -65,7 +65,7 @@ yarn webiny deploy --env prod
 
 ### Deploying a Project Application
 
-To deploy a specific project application, located withing your Webiny project, simple append the path to the folder in which the project application resides, for example:
+To deploy a specific project application, located within your Webiny project, simply append the path to the folder in which the project application resides, for example:
 
 ```bash
 yarn webiny deploy api --env dev
@@ -76,11 +76,6 @@ yarn webiny deploy apps/website --env dev
 Note that when deploying a specific project application, the environment (`--env`) argument is not optional, it must always be set.
 
 ## List AWS Resources
-After deployment, you can view the list of AWS resources and services used by your project application.
-As mentioned above, every Webiny project, by default, has three applications.
-The **API** (`./api`), which represents your project's (GraphQL) API, **Admin Area** (`./apps/admin`), and the **Website** (`./apps/website`), which is your public website.
-Each application uses several cloud infrastructure resources like AWS Lambda functions, API Gateway, DynamoDB table, etc.
-
 To list all cloud infrastructure resources deployed as part of a particular project application, we can run the following command:
 ```bash
 yarn webiny pulumi {folder} --env {env} -- stack
@@ -91,6 +86,8 @@ application, deployed into the `dev` environment, you can run the following comm
 ```bash
 yarn webiny pulumi api --env dev -- stack
 ```
+
+Running the above command should produce the following output:
 
 <!-- vale off -->
 
@@ -110,8 +107,14 @@ deployed as part of the **Admin Area** and **Website** project applications, int
 yarn webiny pulumi apps/admin --env dev -- stack
 yarn webiny pulumi apps/website --env dev -- stack
 ```
+
 :::info
-For more information, please visit the [Execute Pulumi Commands](/docs/how-to-guides/deployment/execute-pulumi-commands) guide.
+For more information on the `webiny pulumi` command, please visit the [Execute Pulumi Commands](/docs/how-to-guides/deployment/execute-pulumi-commands) guide.
+:::
+
+:::tip
+Every Webiny project, by default, consists of three project applications: **API** (`api`), **Admin Area** (`apps/admin`), and **Website** (`apps/website`).
+Read more about project organization in the [Project Organization](/docs/key-topics/project-organization/project-applications-and-packages) key topics section.
 :::
 
 
