docs: improved the statements/
Thanks: Adrian Smijulj, for the input.

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -76,7 +76,7 @@ yarn webiny deploy apps/website --env dev
 Note that when deploying a specific project application, the environment (`--env`) argument is not optional, it must always be set.
 
 ## List AWS Resources
-To list all cloud infrastructure resources deployed as part of a particular project application, we can run the following command:
+To list all cloud infrastructure resources deployed as part of a particular project application, you can run the following command:
 ```bash
 yarn webiny pulumi {folder} --env {env} -- stack
 ```
@@ -113,7 +113,7 @@ For more information on the `webiny pulumi` command, please visit the [Execute P
 :::
 
 :::tip
-Every Webiny project, by default, consists of three project applications: **API** (`api`), **Admin Area** (`apps/admin`), and **Website** (`apps/website`).
+By default, every Webiny project consists of three project applications: **API** (`api`), **Admin Area** (`apps/admin`), and **Website** (`apps/website`).
 Read more about project organization in the [Project Organization](/docs/key-topics/project-organization/project-applications-and-packages) key topics section.
 :::
 
