--- a/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
@@ -97,6 +97,7 @@ If you encounter any problems during the upgrade feel free to give us a shout on
 ## Upgrade your custom Elasticsearch plugins
 
 In this version we started using [elastic-ts](https://github.com/jacobwgillespie/elastic-ts) library to have more robust Typescript types for the Elasticsearch queries.
-Due to changing from our own types to this library, there is a change that you must do in your Elasticsearch plugins which concern the `query`.
+Due to changing from our own types to this library, there is a change that you must do in your custom Elasticsearch plugins which concern the `query`.
+If you do not have custom plugins, just disregard this part of the upgrade.
 
 Our `ElasticsearchQuery` type had `mustNot` property, but `elastic-ts` `BoolQueryConfig` has `must_not` property. You need to change that property if you had it in your plugins.
