Fix links to point to v5.7.0 tag

--- a/docs/how-to-guides/upgrade-webiny/5.6.0-to-5.7.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.6.0-to-5.7.0.mdx
@@ -54,10 +54,10 @@ export const handler = createHandler({
 
 Also change the `graphqlPlugins({ debug: process.env.DEBUG })` to `graphqlPlugins({ debug })`, as we're now very strict about the type of `debug` parameter (it now has to be a boolean). That's why we explicitly define that variable once, and reuse it where needed.
 
-As you can see, we now use a configuration object to explicitly pass `plugins` and other parameters required by the Lambda handler factory package. The `http: { debug }` will be passed all the way to the internal [@webiny/handler-http](https://github.com/webiny/webiny-js/blob/next/packages/handler-http/src/index.ts#L56) package which will handle the errors for us.
+As you can see, we now use a configuration object to explicitly pass `plugins` and other parameters required by the Lambda handler factory package. The `http: { debug }` will be passed all the way to the internal [@webiny/handler-http](https://github.com/webiny/webiny-js/blob/v5.7.0/packages/handler-http/src/index.ts#L56) package which will handle the errors for us.
 
 :::info NOT SURE WHAT TO DO?
-If unsure what the final result should look like, please see [the original file](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/code/graphql/src/index.ts) for a complete example.
+If unsure what the final result should look like, please see [the original file](https://github.com/webiny/webiny-js/blob/v5.7.0/packages/cwp-template-aws/template/api/code/graphql/src/index.ts) for a complete example.
 :::
 
 ### `headlessCMS` Lambda Handler
@@ -78,7 +78,7 @@ export const handler = createHandler({
 ```
 
 :::info NOT SURE WHAT TO DO?
-If unsure what the final result should look like, please see [the original file](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/code/headlessCMS/src/index.ts) for a complete example.
+If unsure what the final result should look like, please see [the original file](https://github.com/webiny/webiny-js/blob/v5.7.0/packages/cwp-template-aws/template/api/code/headlessCMS/src/index.ts) for a complete example.
 :::
 
 ## Upgrade React Applications
