refactor(how-to-guides): 5.8.0 upgrade via cli

--- a/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
@@ -31,50 +31,15 @@ Once the upgrade has finished, running the `yarn webiny --version` command in yo
 
 ## Upgrade Headless CMS
 
-### Add DynamoDB + Elasticsearch plugins
+### Upgrade the lambda code
+Due to some internal changes in how we store data to the database and Elasticsearch you must run the upgrade command to update HeadlessCMS and GraphQL lambda files.
 
-Due to some internal changes in how we store data to the database you must add new plugins to the Headless CMS and GraphQL API lambdas.
-
-First, you need to add new package to the `package.json` file in the `api/code/headlessCMS`, in the `dependencies` section.
-
-```json title="api/code/headlessCMS/package.json"
-"dependencies": {
-	....
-	"@webiny/api-headless-cms-ddb-es": "^5.8.0"
-	....
-}
+Command to run is:
+```
+yarn webiny upgrade 5.8.0
 ```
 
-Then you need import the plugin from the new `@webiny/api-headless-cms-ddb-es` package.
-
-```typescript title="api/code/headlessCMS/src/index.ts"
-// somewhere after the last import
-import headlessCmsDynamoDbElasticsearch from "@webiny/api-headless-cms-ddb-es";
-
-// in the end of the createHandler function
-headlessCmsDynamoDbElasticsearch(),
-```
-
-After that you are done with the Headless CMS, you do the same thing for the`api/code/graphql` `package.json` and `index.ts` file.
-```json title="api/code/graphql/package.json"
-"dependencies": {
-	....
-	"@webiny/api-headless-cms-ddb-es": "^5.8.0"
-	....
-}
-```
-
-Then you import the plugin from the `@webiny/api-headless-cms-ddb-es` package.
-
-```typescript title="api/code/graphql/src/index.ts"
-// somewhere after the last import
-import headlessCmsDynamoDbElasticsearch from "@webiny/api-headless-cms-ddb-es";
-
-// in the end of the createHandler function
-headlessCmsDynamoDbElasticsearch(),
-```
-
-When you are done with import, re-deploy your API code.
+When you are done with the upgrade, re-deploy your API code.
 
 ```shell
 yarn webiny deploy api --env=YOUR_ENVIRONMENT
@@ -82,15 +47,15 @@ yarn webiny deploy api --env=YOUR_ENVIRONMENT
 
 ### Upgrade in the Admin
 
-When your API code is deployed go to your admin url and there should be an upgrade screen.
+When your API code deploys, go to your admin url and there should be an upgrade screen.
 If upgrade screen does not show, try to clear cookies, local storage and log back in.
 
 :::note
 If there is still no upgrade screen, verify that you have done the previous step correctly.
 :::
 
-Clicking on the `Upgrade` button the upgrade API call is triggered and the upgrade starts.
-Depending on the amount of the data you have it might take few seconds to complete.
+Clicking on the `Upgrade` button will start the upgrade script.
+Depending on the amount of the data you have it might take few seconds/minutes to complete.
 
 If you encounter any problems during the upgrade feel free to give us a shout on our [Community Slack #headless-cms](https://webiny-community.slack.com/archives/C0147R8166P) channel.
 
