refactor(how-to-guides): add execute in project root

--- a/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
@@ -35,13 +35,15 @@ Once the upgrade has finished, running the `yarn webiny --version` command in yo
 Due to some internal changes in how we store data to the database and Elasticsearch you must run the upgrade command to update HeadlessCMS and GraphQL lambda files.
 
 Command to run is:
-```
+```bash
+# Execute in your project root.
 yarn webiny upgrade 5.8.0
 ```
 
 When you are done with the upgrade, re-deploy your API code.
 
-```shell
+```bash
+# Execute in your project root.
 yarn webiny deploy api --env=YOUR_ENVIRONMENT
 ```
 
