ix(how-to-guides): insert help channel instead of headless-cms

--- a/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
@@ -59,7 +59,7 @@ If there is still no upgrade screen, verify that you have done the previous step
 Clicking on the `Upgrade` button will start the upgrade script.
 Depending on the amount of the data you have it might take few seconds/minutes to complete.
 
-If you encounter any problems during the upgrade feel free to give us a shout on our [Community Slack #headless-cms](https://webiny-community.slack.com/archives/C0147R8166P) channel.
+If you encounter any problems during the upgrade feel free to give us a shout on our [Community Slack #help](https://webiny-community.slack.com/archives/C014Y0HGJ0Y) channel.
 
 ## Upgrade your custom Elasticsearch plugins
 
