fix: change apply to applies

--- a/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
@@ -66,7 +66,7 @@ As stated in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#pre-prod
 ## Optional - Upgrade Custom Elasticsearch Plugins
 
 :::info
-The following only apply to users who have created custom Elasticsearch plugins in their code.
+The following only applies to users who have created custom Elasticsearch plugins in their application code.
 :::
 
 In this release, we introduced the [elastic-ts](https://github.com/jacobwgillespie/elastic-ts) package, which enables us to have a more robust Typescript support while writing Elasticsearch-related code (for example, performing Elasticsearch queries).
