fix: update github links in 5.4. to 5.5. guide

--- a/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
@@ -62,9 +62,9 @@ You can then proceed by committing the changes to your working branch and trying
 
 #### 1. Add `apolloLinks.ts` file (located in your Website project application)
 
-In your **Website** project application (`apps/website`), we need to add the new [`apolloLinks.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cwp-template-aws/template/apps/website/code/src/plugins/apolloLinks.ts) file, that contains a couple of plugins, necessary for resolving a couple of pre-rendering related [issues](https://github.com/webiny/webiny-js/pull/1569).
+In your **Website** project application (`apps/website`), we need to add the new [`apolloLinks.ts`](https://github.com/webiny/webiny-js/blob/v5.5.0/packages/cwp-template-aws/template/apps/website/code/src/plugins/apolloLinks.ts) file, that contains a couple of plugins, necessary for resolving a couple of pre-rendering related [issues](https://github.com/webiny/webiny-js/pull/1569).
 
-Copy and paste the above mentioned `apolloLinks.ts` file to `apps/website/code/src/plugins/apolloLinks.ts`, and also, make sure it's imported in the [index.ts](https://github.com/webiny/webiny-js/blob/v5/packages/cwp-template-aws/template/apps/website/code/src/plugins/index.ts), located in the same `plugins` folder:
+Copy and paste the above mentioned `apolloLinks.ts` file to `apps/website/code/src/plugins/apolloLinks.ts`, and also, make sure it's imported in the [index.ts](https://github.com/webiny/webiny-js/blob/v5.5.0/packages/cwp-template-aws/template/apps/website/code/src/plugins/index.ts), located in the same `plugins` folder:
 
 ```ts title="apps/website/code/src/plugins/index.ts" {5,9}
 import { plugins } from "@webiny/plugins";
@@ -80,13 +80,13 @@ plugins.register([imageComponent(), pageBuilder, formBuilder, apolloLinks(), the
 
 #### 2. Update `Page` React component (located in your Website project application)
 
-Open your `/apps/website/code/src/components/Page/index.tsx` file and replace its content with [the new one](https://github.com/webiny/webiny-js/blob/v5/packages/cwp-template-aws/template/apps/website/code/src/components/Page/index.tsx). This change is also related to new pre-rendering related fixes.
+Open your `/apps/website/code/src/components/Page/index.tsx` file and replace its content with [the new one](https://github.com/webiny/webiny-js/blob/v5.5.0/packages/cwp-template-aws/template/apps/website/code/src/components/Page/index.tsx). This change is also related to new pre-rendering related fixes.
 
 #### 3. Optionally, add necessary environment variables to enable newly introduced logs forwarding
 
 The new `webiny watch` command enables you to [stream logs](/docs/changelog/5.5.0#logs) from your application code directly to your terminal. And while all new projects will have this feature automatically enabled, there are a couple of manual steps that needs to be done for projects that are making the upgrade to version `5.5.0`.
 
-In [api/pulumi/dev/index.ts](https://github.com/webiny/webiny-js/blob/v5/packages/cwp-template-aws/template/api/pulumi/dev/index.ts), upon instantiating both `Graphql` and `HeadlessCMS` classes, make sure to pass the `WEBINY_LOGS_FORWARD_URL: String(process.env.WEBINY_LOGS_FORWARD_URL)` as an environment variable.
+In [api/pulumi/dev/index.ts](https://github.com/webiny/webiny-js/blob/v5.5.0/packages/cwp-template-aws/template/api/pulumi/dev/index.ts), upon instantiating both `Graphql` and `HeadlessCMS` classes, make sure to pass the `WEBINY_LOGS_FORWARD_URL: String(process.env.WEBINY_LOGS_FORWARD_URL)` as an environment variable.
 
 With that, you will also need to add the `@webiny/handler-logs` dependency to [`api-graphql`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/code/graphql/package.json#L27) and [`api-headless-cms`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/code/headlessCMS/package.json#L21) packages, and register its plugins in respective [index.ts](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/code/graphql/src/index.ts#L25) / [index.ts](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/code/headlessCMS/src/index.ts#L17) files.
 
