fix: remove redundant "both" word

--- a/docs/changelog/5.8.0.mdx
+++ b/docs/changelog/5.8.0.mdx
@@ -34,7 +34,7 @@ The filtering can be utilized in any of the [three Headless CMS GraphQL API type
 Every content entry ID consists of two parts - entry ID and revision number. For example, the following three IDs represent the same content entry, but three different revisions of it: `abcxyz#0001`, `abcxyz#0007`, `abcxyz#0015`.
 
 :::info
-With Webiny Headless CMS, users first define both content models, for example **Blog Post**, **Book**, **Author**, and so on. Once those are in place, they continue by creating content entries, which consist of the information that was specified in their respective content model. Every content entry can have multiple revisions, of which only one can be marked as the published one.
+With Webiny Headless CMS, users first define content models, for example **Blog Post**, **Book**, **Author**, and so on. Once those are in place, they continue by creating content entries, which consist of the information that was specified in their respective content model. Every content entry can have multiple revisions, of which only one can be marked as the published one.
 :::
 
 Via the [Headless CMS GraphQL API](/docs/key-topics/webiny-applications/headless-cms/graphql-api), this structure of content entry IDs allows users to retrieve a specific revision of a content entry. For example, here we are retrieving the revision number three (note the `#0003` in the value passed to the `id` input field):
