fix: instruct to deploy the whole project, instead of just API project app

--- a/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
@@ -46,11 +46,11 @@ Before running the `webiny upgrade` command, we recommend that you commit any ac
 
 ## 3. Deploy Your Project and Finish the Upgrade in the Webiny Admin Area
 
-Finally, proceed by re-deploying the **API** project application:
+Finally, proceed by re-deploying your Webiny project:
 
 ```bash
 # Execute in your project root.
-yarn webiny deploy api --env {environment}
+yarn webiny deploy --env {environment}
 ```
 
 Then, open your existing Admin Area application in your browser, and follow the instructions presented in the upgrade wizard. Note that, depending on the amount of data in the database, the upgrade process might take anywhere from a few seconds to a couple of minutes in order to finish.
